# googol

./: .gitignore  Makefile  README.md  gmail_services.py  google_services.py  pyproject.toml  setup.py
assets/: readme.md  textfile.txt
data/: file1  file542.txt
docs/: google_APIs.md  using.md
examples/: gmail_actions.py  send_email.py
googol/: __init__.py  email.py  gmail.py  google.py  google_drive.py  tasks.py  utils.py
lib/: gmail_services.py  google_drive.py  google_services.py
src/googol/: __init__.py  drive.py  tasks.py  utils.py
test/: send_email_test.py  test.py  test_gmail.py  testdata.py
tests/: test_email_class.py  test_gmail.py  testdata.py
