[project]
name = "googol"
# project info
# set these as dynamic so that they don"t have to be defined manually
dynamic = ["version", "readme"]
requires-python = ">=3.7"

dependencies = [
    "google-auth",
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib"
]
description = "Just some modules that allow to use some Google Services"
authors = [{name = "Cesar Nunez Rodriguez", email = "cesarnr21@gmail.com" }]
maintainers = [{name = "Cesar Nunez Rodriguez", email = "cesarnr21@gmail.com" }]


[project.urls]
"source" = "https://github.com/cesarnr21/googol"
"bug tracker" = "https://github.com/cesarnr21/googol/issues"


# set up packaging
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["googol"]
package-dir = {"" = "src/"}


[tool.setuptools.dynamic]
version = {attr = "googol.__version__"}  # required
readme = {file = ["README.md", "docs/USING.md"], content-type = "text/plain"}


# set up development enviroment
[project.optional-dependencies]
dev = ["black", "flake8", "pylint", "yapf"]
test = ["pytest", "pytest-cov"]


[tool.black]
line_length = 120
skip-string-normalization = true
